Add handlebars file, added addBeer functionality addBeer html form addBeer click handler addBeer ajax request (data not yet added)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body class="container-fluid">
       <h1>Brew Scout</h1>
 
-      <!-- Sign Up Form -->
+<!-- Sign Up Form -->
     <section class="authforms">
       <form id="sign-up">
         <fieldset>
@@ -72,3 +72,27 @@
     <p class="changepwmsg">Password changed.</p>
     </body>
 </html>
+
+<!-- Add Beer Form -->
+<form id="addBeer">
+  <fieldset>
+    <legend>Add a Beer</legend>
+
+    <label>Name</label>
+    <input type="text" name="[beer][name]" placeholder="Name">
+
+    <label>Brand</label>
+    <input type="text" name="[beer][brand]" placeholder="Brand">
+
+    <label>Style</label>
+    <input type="text" name="[beer][style]" placeholder="Style">
+
+    <label>Alc Content</label>
+    <input type="number" name="[beer][alc]" placeholder="Alc Content">
+
+    <label>Price</label>
+    <input type="number" name="[beer][price]" placeholder="Price">
+
+    <input type="submit" class="button" name="submit" value="Add Beer">
+  </fieldset>
+</form>
