Added title for beers list html

--- a/index.html
+++ b/index.html
@@ -96,3 +96,7 @@
     <input type="submit" class="button" name="submit" value="Add Beer">
   </fieldset>
 </form>
+
+<!-- Beers List -->
+
+<h2>Your Beers</h2>
