Display index call as  beers list with handlebars connected index api call to populate handlebars template update css styling of handlebars template elements

--- a/index.html
+++ b/index.html
@@ -70,8 +70,6 @@
     </section>
     <p class="errormsg"></p>
     <p class="changepwmsg">Password changed.</p>
-    </body>
-</html>
 
 <!-- Add Beer Form -->
 <form id="addBeer">
@@ -100,5 +98,8 @@
 <!-- Beers List -->
 
 <section class="yourBeers">
-<h2>Your Beers</h2>
+<h2 class="beerList">Your Beers</h2>
 </section>
+
+</body>
+</html>
