UI bug fixes updates Added hide/show for addBeer for on sign/out updated button styling to make it more consistent Updated beer list title added styling added hide/show on signin

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </fieldset>
       </form>
 
-      <button class="signout-button">Sign Out</button>
+      <button class="signout-button button">Sign Out</button>
     </section>
     <p class="errormsg"></p>
     <p class="changepwmsg">Password changed.</p>
@@ -96,9 +96,8 @@
 </form>
 
 <!-- Beers List -->
-
-<section class="yourBeers">
-<h2 class="beerList">Your Beers</h2>
+<legend class="beerListTitle">Your Personal Beer List</legend>
+<section class="beerList">
 </section>
 
 </body>
