UI bug fixes Added error msg hides after add/update/delete Removed console logging Clear form fields add/update after submit Made beer name field required in add beer

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <legend>Add a Beer</legend>
 
     <label>Name</label>
-    <input type="text" name="[beer][name]" placeholder="Name">
+    <input type="text" name="[beer][name]" placeholder="Name" required="true">
 
     <label>Brand</label>
     <input type="text" name="[beer][brand]" placeholder="Brand">
