--- a/index.html
+++ b/index.html
@@ -12,11 +12,241 @@
      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
 
     </head>
-    <body class="container-fluid">
+<body class="container-fluid">
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brew Scout</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+
+<!-- Login Dropdown -->
+    <ul class="nav navbar-nav navbar-right login-dp">
+
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle login-dp" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+			<ul id="login-dp" class="dropdown-menu login-dp">
+				<li class="loginForm">
+					 <div class="row">
+							<div class="col-md-12">
+
+								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="sign-in">
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
+											 <input type="email" name="[credentials][email]" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+										</div>
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputPassword2">Password</label>
+											 <input type="password" name="[credentials][password]" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+
+										</div>
+										<div class="form-group">
+											 <button type="submit" class="btn btn-primary btn-block">Login</button>
+										</div>
+                    <p class="errormsg err-log-in"></p>
+								 </form>
+							</div>
+					 </div>
+				</li>
+			</ul>
+    </li>
+  </ul>
+
+<!-- Create account dropdown -->
+  <ul class="nav navbar-nav navbar-right create-account-dp">
+
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle create-account-dp" data-toggle="dropdown"><b>Create Account</b><span class="caret"></span> </a>
+    <ul id="create-account-dp" class="dropdown-menu create-account-dp">
+      <li class="createAccountForm">
+         <div class="row">
+            <div class="col-md-12">
+
+               <form class="form create-dp" role="form" method="post" action="login" accept-charset="UTF-8" id="create-account">
+                  <div class="form-group">
+                     <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                     <input type="email" name="[credentials][email]" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+                  </div>
+                  <div class="form-group">
+                     <label class="sr-only" for="exampleInputPassword2">Password</label>
+                     <input type="password" name="[credentials][password]" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+
+                  </div>
+
+                  <div class="form-group">
+                     <label class="sr-only" for="exampleInputPassword2">Confirm Password</label>
+                     <input type="password" name="[credentials][password_confirmation]" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+
+                  </div>
+                  <div class="form-group">
+                     <button type="submit" class="btn btn-primary btn-block">Create Account</button>
+                  </div>
+                  <p class="errormsg err-create"></p>
+                  <p class="successmsg success-create"></p>
+
+               </form>
+            </div>
+         </div>
+      </li>
+    </ul>
+  </li>
+</ul>
+<!-- Log out -->
+<ul class="nav navbar-nav navbar-right log-out">
+<button id="log-out" class="log-out signout-button">Log Out</button>
+</ul>
+<!-- Change Password Dropdown -->
+    <ul class="nav navbar-nav navbar-right change-password-dp-nav">
+
+    <li class="dropdown change-password-dp">
+      <a href="#" class="dropdown-toggle change-password-dp" data-toggle="dropdown"><b>Change Password</b> <span class="caret"></span></a>
+			<ul id="change-password-dp" class="dropdown-menu change-password-dp">
+				<li class="changePasswordForm">
+					 <div class="row">
+							<div class="col-md-12">
+
+								 <form class="form" role="form" accept-charset="UTF-8" id="change-password">
+										<div class="form-group">
+											 <label class="sr-only" for="oldPassword">Old Password</label>
+											 <input type="password" name="[passwords][old]" class="form-control" id="exampleInputEmail2" placeholder="Old Password" required>
+										</div>
+										<div class="form-group">
+											 <label class="sr-only" for="newPassword">Password</label>
+											 <input type="password" name="[passwords][new]" class="form-control" id="exampleInputPassword2" placeholder="New Password" required>
+
+										</div>
+										<div class="form-group">
+											 <button type="submit" class="btn btn-primary btn-block">Change Password</button>
+										</div>
+                    <p class="changepwmsg">Password changed.</p>
+                    <p class="errormsg err-changepw"></p>
+                    <p class="successmsg success-changepw"></p>
+								 </form>
+							</div>
+					 </div>
+				</li>
+			</ul>
+    </li>
+  </ul>
+      </div>
+    </div>
+  </nav>
+
+<!-- Carousel -->
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
+          <div class="carousel-caption">
+            <h3>Save the beers you love.</h3>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+          <div class="carousel-caption">
+            <h3>Remember them later...</h3>
+            <p></p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+          <div class="carousel-caption">
+            <h3>And so much more!</h3>
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+  </div>
+
+  <div class="container text-center">
+    <h3>About Brew Scout</h3><br>
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        <p>Features!</p>
+      </div>
+      <div class="col-sm-4">
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        <p>Progress!</p>
+      </div>
+      <div class="col-sm-4">
+        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        <p>Utility!</p>
+      </div>
+    </div>
+  </div><br>
+
+  <!-- Add Beer Form -->
+  <form id="addBeer">
+    <fieldset>
+      <legend>Add a Beer</legend>
+
+      <label>Name</label>
+      <input type="text" name="[beer][name]" placeholder="Name" required="true">
+
+      <label>Brand</label>
+      <input type="text" name="[beer][brand]" placeholder="Brand">
+
+      <label>Style</label>
+      <input type="text" name="[beer][style]" placeholder="Style">
+
+      <label>Alc Content</label>
+      <input type="number" name="[beer][alc]" placeholder="Alc Content">
+
+      <label>Price</label>
+      <input type="number" name="[beer][price]" placeholder="Price">
+
+      <input type="submit" class="button" name="submit" value="Add Beer">
+    </fieldset>
+  </form>
+
+  <!-- Beers List -->
+  <legend class="beerListTitle">Your Personal Beer List</legend>
+  <section class="beerList">
+  </section>
+
+  <footer class="container-fluid text-center">
+    <p>Brew Scout</p>
+  </footer>
+
+
+<!-- OLD STUFF -->
+    <!-- <body class="container-fluid">
       <h1>Brew Scout</h1>
 
 <!-- Sign Up Form -->
-    <section class="authforms">
+    <!-- <section class="authforms">
       <form id="sign-up">
         <fieldset>
           <legend>Sign up!</legend>
@@ -32,10 +262,10 @@
 
           <input type="submit" class="button" name="submit" value="Sign up!">
         </fieldset>
-      </form>
+      </form> -->
 
 <!-- Sign In Form -->
-      <form id="sign-in">
+      <!-- <form id="sign-in">
         <fieldset>
           <legend>Sign in!</legend>
 
@@ -47,10 +277,10 @@
 
           <input class="button" type="submit" name="submit" value="Sign in!">
         </fieldset>
-      </form>
+      </form> -->
 
 <!-- Change Password Form -->
-      <button id="changepwbutton">Change Password</button>
+      <!-- <button id="changepwbutton">Change Password</button>
 
       <form id="change-password">
         <fieldset>
@@ -69,10 +299,10 @@
       <button class="signout-button button">Sign Out</button>
     </section>
     <p class="errormsg"></p>
-    <p class="changepwmsg">Password changed.</p>
+    <p class="changepwmsg">Password changed.</p> -->
 
 <!-- Add Beer Form -->
-<form id="addBeer">
+<!-- <form id="addBeer">
   <fieldset>
     <legend>Add a Beer</legend>
 
@@ -96,9 +326,11 @@
 </form>
 
 <!-- Beers List -->
-<legend class="beerListTitle">Your Personal Beer List</legend>
+<!-- <legend class="beerListTitle">Your Personal Beer List</legend>
 <section class="beerList">
-</section>
+</section> -->
 
 </body>
+
+
 </html>
