--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 											 <input type="password" name="[passwords][old]" class="form-control" id="exampleInputEmail2" placeholder="Old Password" required>
 										</div>
 										<div class="form-group">
-											 <label class="sr-only" for="newPassword">Password</label>
+											 <label class="sr-only" for="newPassword">New Password</label>
 											 <input type="password" name="[passwords][new]" class="form-control" id="exampleInputPassword2" placeholder="New Password" required>
 
 										</div>
