UI bug fixes Updated body container to be full width Updated padding of containers Updated padding for mobile width

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </head>
 <body class="container-fluid">
-  <div class="fill">
+  <!-- <div class="fill"> -->
   <nav class="navbar">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -34,7 +34,7 @@
         </ul> -->
 
 <!-- Login Dropdown -->
-    <ul class="nav navbar-nav navbar-right login-dp">
+    <ul class="nav navbar-nav navbar-right login-dp login-dp-css">
 
     <li class="dropdown">
       <a href="#" class="dropdown-toggle login-dp nav-item" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
@@ -66,7 +66,7 @@
   </ul>
 
 <!-- Create account dropdown -->
-  <ul class="nav navbar-nav navbar-right create-account-dp">
+  <ul class="nav navbar-nav navbar-right create-account-dp create-account-dp-css">
 
   <li class="dropdown">
     <a href="#" class="dropdown-toggle create-account-dp nav-item" data-toggle="dropdown"><b>Create Account</b><span class="caret"></span> </a>
@@ -110,7 +110,7 @@
   <!-- <ul class="nav navbar-nav navbar-right hidden log-out signout-button">
     <li id="log-out" class="log-out signout-button nav-item">Log Out</li>
   </ul> -->
-  <ul class="nav navbar-nav navbar-right log-out signout-button">
+  <ul class="nav navbar-nav navbar-right log-out signout-button log-out-css">
     <button id="log-out" class="log-out signout-button nav-item">Log Out</button>
   </ul>
 
@@ -258,7 +258,7 @@
 
 
   <!-- Beers List -->
-  <div>
+  <div class="beer-list-div">
     <legend class="beerListTitle">Your Personal Beer List</legend>
     <div>
       <p class="beer-msg"></p>
@@ -269,7 +269,7 @@
 
 
   <footer class="container-fluid ">
-    <p>Brew Scout 2017 ©</p>
+    <p class="footer-text">Brew Scout 2017 ©</p>
   </footer>
 
 
@@ -361,7 +361,7 @@
 <!-- <legend class="beerListTitle">Your Personal Beer List</legend>
 <section class="beerList">
 </section> -->
-</div>
+<!-- </div> -->
 </body>
 
 
