Removed dupe sign out button class in html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
   <!-- <ul class="nav navbar-nav navbar-right hidden log-out signout-button">
     <li id="log-out" class="log-out signout-button nav-item">Log Out</li>
   </ul> -->
-  <ul class="nav navbar-nav navbar-right log-out signout-button log-out-css">
+  <ul class="nav navbar-nav navbar-right log-out log-out-css">
+  <!-- <ul class="nav navbar-nav navbar-right log-out signout-button log-out-css"> -->
     <button id="log-out" class="log-out signout-button nav-item">Log Out</button>
   </ul>
 
