--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
 
       <!-- Wrapper for slides -->
@@ -245,12 +246,12 @@
 
     <div class="form-group">
       <label>Alc</label>
-      <input type="number" name="[beer][alc]" placeholder="Alc Content" class="form-control">
+      <input type="number" name="[beer][alc]" placeholder="Alc Content" class="form-control" min="0">
     </div>
 
     <div class="form-group">
       <label>Price</label>
-      <input type="number" name="[beer][price]" placeholder="Price" class="form-control">
+      <input type="number" name="[beer][price]" placeholder="Price" class="form-control" min="1">
     </div>
 
     <input type="submit" class="btn btn-default button" name="submit" value="Add Beer">
