Changed modal form label colors

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <div class="col-sm-2"></div>
     				<div class="modal-content col-sm-8">
 
-                <form id="addBeer" class="">
+                <form id="addBeer" class="modal_form">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h3 class="modal-title">Add a Beer</h3>
@@ -350,7 +350,7 @@
           <div class="col-sm-2"></div>
           <div class="modal-content col-sm-8">
 
-              <form id="updateBeer" class="">
+              <form id="updateBeer" class="modal_form">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
                   <h3 class="modal-title">Update a Beer</h3>
