Change close button to say cancel

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     </div>
                     <p class="errormsg"></p>
                     <input type="submit" class="btn btn-default button" name="submit" value="Add Beer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 
                   </form>
 
@@ -382,7 +382,7 @@
                   </div>
                   <p class="errormsg"></p>
                   <input type="submit" class="btn btn-default button" name="submit" value="Update Beer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 
                 </form>
 
@@ -409,7 +409,7 @@
                   </div>
                   <p class="errormsg"></p>
                   <button id="deleteBeer" type="button" class="btn btn-default button">Delete Beer</button>
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 
                 </div>
                 <div class="col-sm-2"></div>
