Add metatag for featured image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>Brew Scout</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta property="og:image" content="http://visityolo.com/substance/uploads/Layer_19-1024x2401.jpg">
 
      <!-- Do not add `link` tags unless you know what you are doing -->
      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
